--- a/assignmentone.html
+++ b/assignmentone.html
@@ -7,8 +7,28 @@
     <link rel="stylesheet" href="style/assignmentstyle.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header class="head">
+        <div class="hpad">
+            <h3 class="greet">Happy New Year</h3>
+            <h1 class="aftergreet">New Year Party <br> Celebration</h1>
+        </div>  
+    </header>
+    <main>
+        <h1 class="discount">65% OFF</h1>
+        <h4 class="des2">OUR HOLIDAY DEALS ARE BETTER</h4>
+        <h2 class="categ">ALL CATEGORIES</h2>
+        <div class="im1">
+            <img src="resources/New Year Photo.png" alt="New year Photo">
+        </div>       
+        <section class="sec1">
+                <div>
+                    <h1 class="welcome">Welcome to <br>midnight party</h1>
+                    <h3 class="afterwel">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</h3>
+                </div>
+                <h2 class="welend">Join Now<h1 class="welcome">Welcome to <br>midnight party</h1>
+                
+        </section> 
+    </main>
     <footer></footer>
 </body>
 </html>
