--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <h2 class="nt1">WHAT IS FUNCTIONAL</h2>
         <h1 class="nt2">Holidays <span class="t1c">Sale 50%</span></h1>
         <h3 class="nt3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</h3>
+
+
+        </div>
         <div class="pintro">
             <h2 class="p1">THE BEST GIFTS</h2>
             <h1 class="p2">Our Awesome Portfolio</h1>
@@ -80,7 +83,11 @@
             <img src="resources/Group 61.png" alt="">
             <h1 class="mailt">Subscribe Newsletter</h1>
             <h3 class="mailt2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod.</h3>
-        </div>
+            <form class="box">
+                <input type="text" placeholder="              user@gmail.com">
+                <input type="submit" value="Subscribe">
+            </form>
+         </div>
     </main>
     <footer class="end">
         <div class="dh">
