--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
         <h2 class="nt1">WHAT IS FUNCTIONAL</h2>
         <h1 class="nt2">Holidays <span class="t1c">Sale 50%</span></h1>
         <h3 class="nt3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit consectetur.</h3>
-
-
+        <div class="extra">
+            <img class="s s1" src="resources/Group 44.png" alt="">
+            <img class="s s2" src="resources/Group 75.png" alt="">
+            <img class="s s3" src="resources/Rectangle 2.png" alt="">
+            <img class="s s4" src="resources/Rectangle 1.png" alt="" >
         </div>
         <div class="pintro">
             <h2 class="p1">THE BEST GIFTS</h2>
